# gpt-light

./: .gitignore  README.md  requirements.txt
gptlight/: pyproject.toml
gptlight/notebooks/: embeddings.ipynb  fine_tuning_for_classif.ipynb  pre_training.ipynb  sampling .ipynb  toKenization.ipynb
gptlight/src/gptlight/data/: __init__.py
gptlight/src/gptlight/data/datasets/: __init__.py  classification.py  pretraining.py
gptlight/src/gptlight/datasets/: __init__.py
gptlight/src/gptlight/models/: __init__.py
gptlight/src/gptlight/models/transformer/: __init__.py  ffn.py
gptlight/src/gptlight/notebooks/: attention_mechanisms.ipynb  embeddings.ipynb  gpt_architecture.ipynb  pre_training.ipynb  sampling .ipynb  toKenization.ipynb
gptlight/src/gptlight/tokenizer/: __init__.py  simple_tokenizer.py
gptlight/src/gptlight/training/: __init__.py
gptlight/src/gptlight/utils/: __init__.py  data.py
