[tool.poetry]
name = "gptlight"
version = "0.1.0"
description = "A Light GPT model"
authors = ["Data Builder Hub <developer@databuilderhub.com>"]
packages = [
    { include = "gptlight", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
torch = ">=2.2.2,<2.6"
jupyterlab = ">=4.0"
tiktoken = ">=0.5.1"
matplotlib = ">=3.7.1"
tensorflow = ">=2.18.0"
tqdm = ">=4.66.1"
numpy = ">=1.26"
pandas = ">=2.2.1"
psutil = ">=5.9.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
